@@ -9,6 +9,7 @@ build_requires:
   File::Spec::Functions: 0
   FindBin: 0
   Test::More: 0
+  Test::NoWarnings: 0
   Test::Pod: 0
   Test::Pod::Coverage: 0
 configure_requires:
