@@ -22,6 +22,7 @@ test_requires 'English' => 0;
 test_requires 'File::Spec::Functions' => 0;
 test_requires 'FindBin' => 0;
 test_requires 'Test::More' => 0;
+test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Pod' => 0;
 test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
